--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon app.js",
-    "start-dev": "nodemon app.js"
+    "start": "node app.js",
+    "start-dev": "node app.js"
   },
   "author": "Jonathan Spruance",
   "license": "ISC",
@@ -21,5 +21,7 @@
     "moxios": "^0.4.0",
     "nodemon": "^1.18.11",
     "supertest": "^4.0.0"
+  },
+  "engines": { "node" : ">=16 <18" 
   }
 }
