--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^1.18.11",
     "supertest": "^4.0.0"
   },
-  "engines": { "node" : ">=16 <18" 
+  "engines": { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0" 
   }
 }
